--- a/style.css
+++ b/style.css
@@ -1582,6 +1582,8 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
 	align-items: center;
 	position: fixed;
 	top: 0;
+	bottom: 0;
+	right: 0;
 	left: 0;
 	background: rgba(0, 0, 0, .5);
 	-webkit-transition: .3s;
