NPMのスタイル変更

--- a/style.css
+++ b/style.css
@@ -648,7 +648,6 @@ aside div:not(:last-of-type) {
   text-decoration: none;
 }
 #my-music>div {
-  max-width: 90vw;
   margin: auto 0;
   display: -webkit-box;
   display: -webkit-flex;
@@ -660,8 +659,7 @@ aside div:not(:last-of-type) {
           align-items: center;
 }
 #my-music .meta {
-  margin-left: 4vmin;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  margin-left: 10px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
       -ms-flex: 1;
@@ -671,15 +669,9 @@ aside div:not(:last-of-type) {
   display: block;
 }
 #artwork {
-  max-width: 40vmin;
-  max-height: 40vmin;
-  width: 250px;
-  height: 250px;
-  min-width: 100px;
-  min-height: 100px;
+	width: 60px;
+	height: 60px;
   border-radius: 5px;
-  -webkit-box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.2);
-          box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.2);
   -o-object-fit: cover;
      object-fit: cover
 }
