NPMのスタイル変更

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ p {
 		-ms-flex-pack: center;
 		justify-content: center;
 	}
-	.post-list,.post-main,#side-content,.newer-page div,.older-page div,.home-page div,.newer-post div,.older-post div {
+	.post-list,.post-main,#side-content,#my-music>div,.newer-page div,.older-page div,.home-page div,.newer-post div,.older-post div {
 		border: solid 1px #e4e4e4;
 		border-radius: 3px;
 	}
