--- a/style.css
+++ b/style.css
@@ -646,6 +646,7 @@ aside div:not(:last-of-type) {
 #my-music {
   color: #363636;
   text-decoration: none;
+	margin-bottom: 10px;
 }
 #my-music>div {
   margin: auto 0;
