--- a/style.css
+++ b/style.css
@@ -650,6 +650,7 @@ aside div:not(:last-of-type) {
 }
 #my-music>div {
   margin: auto 0;
+	padding: 10px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
