--- a/style.css
+++ b/style.css
@@ -142,6 +142,19 @@ p {
 	max-height: 90vmin;
 	border-radius: 3px;
 }
+.youtube {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%;
+  margin: 0 auto;
+}
+.youtube iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 .post-main a img {
 	-webkit-transition: .5s ease;
 	-o-transition: .5s ease;
