preのmarginサイズを変更

--- a/style.css
+++ b/style.css
@@ -1655,7 +1655,7 @@ pre {
 	font-size: 13px;
 	color: #d8d8d8;
 	line-height: 1.2;
-	margin: 30px 0 10px 0;
+	margin: 10px 0;
 	padding: 20px;
 	border-radius: 5px;
 	background: #282b2e;
