コードフォントサイズを変更

--- a/style.css
+++ b/style.css
@@ -1585,7 +1585,7 @@ pre,.code {
 	background: #e5e5e5;
 }
 pre {
-	font-size: 13px;
+	font-size: .9em;
 	color: #d8d8d8;
 	line-height: 1.2;
 	margin: 10px 0;
