--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ a:hover {
 	color: #232323;
 	font-size: 1.2em;
 	padding: .15em .5em .4em 2em;
-	margin: .3em 0 .5em 0;
+	margin: 1em 0 .5em 0;
 	border-bottom: 1px solid #8ddbba;
 	position: relative;
 }
