--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ body {
 	overflow-scrolling: touch;
 	-webkit-font-smoothing: subpixel-antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-kerning: normal;
+	        font-kerning: normal;
 }
 ::-moz-selection {
 	background: rgba(60,165,145,.2);
