--- a/style.css
+++ b/style.css
@@ -1684,11 +1684,22 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
 	background: rgba(31, 20, 11, .3);
 	backdrop-filter: blur(3px);
 	-webkit-backdrop-filter: blur(3px);
-	-webkit-transition: .3s;
-	transition: .3s;
 	z-index: 99999999999;
 	-webkit-transform: translate3d(0, 0, 0);
 	        transform: translate3d(0, 0, 0);
+}
+.copy {
+	color: #fff;
+	font-size: 1.5em;
+	text-align: center;
+	padding: 6px;
+	border-radius: 6px;
+	background: rgba(31, 20, 11, .3);
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
 }
 .light-box img {
   max-width: 70vw;
@@ -1696,12 +1707,52 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
 	border-radius: 3px;
 }
 .close {
-  opacity: 0;
-  visibility: hidden;
+  -webkit-animation: .3s linear feedout;
+          animation: .3s linear feedout;
 }
 .open {
-  opacity: 1;
-  visibility: visible;
+  -webkit-animation: .3s linear feedin;
+          animation: .3s linear feedin;
+}
+@-webkit-keyframes feedin {
+	from {
+		opacity: 0;
+		visibility: hidden;
+	}
+	to {
+		opacity: 1;
+  	visibility: visible;
+	}
+}
+@keyframes feedin {
+	from {
+		opacity: 0;
+		visibility: hidden;
+	}
+	to {
+		opacity: 1;
+  	visibility: visible;
+	}
+}
+@-webkit-keyframes feedout {
+	from {
+		opacity: 1;
+  	visibility: visible;
+	}
+	to {
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+@keyframes feedout {
+	from {
+		opacity: 1;
+  	visibility: visible;
+	}
+	to {
+		opacity: 0;
+		visibility: hidden;
+	}
 }
 
 /* Siema */
