--- a/style.css
+++ b/style.css
@@ -54,85 +54,43 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-kerning: normal;
 	        font-kerning: normal;
-}
-body::before {
-	content: "";
-	display: block;
-	width: 100vw;
-	height: 100vh;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	z-index: 99999999999;
-	-webkit-animation: .3s pageFeedout;
-	        animation: .3s pageFeedout;
-}
-.feedin::before {
-	content: "";
-	display: block;
-	width: 100vw;
-	height: 100vh;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	z-index: 99999999999;
 	-webkit-animation: .3s pageFeedin;
 	        animation: .3s pageFeedin;
 }
-@-webkit-keyframes pageFeedout {
-	from {
-		opacity: 1;
-  	visibility: visible;
-		background: #fff;
-	}
-	to {
-		opacity: 0;
-		visibility: hidden;
-		z-index: -99999999999;
-		background: #fff;
-	}
-}
-@keyframes pageFeedout {
-	from {
-		opacity: 1;
-  	visibility: visible;
-		background: #fff;
-		display: block;
-
-	}
-	to {
-		opacity: 0;
-		visibility: hidden;
-		z-index: -99999999999;
-		background: #fff;
-	}
+.feedin {
+	-webkit-animation: .3s pageFeedout;
+	        animation: .3s pageFeedout;
 }
 @-webkit-keyframes pageFeedin {
 	from {
 		opacity: 0;
-		visibility: hidden;
-		background: #fff;
 	}
 	to {
 		opacity: 1;
-  	visibility: visible;
-		background: #fff;
 	}
 }
 @keyframes pageFeedin {
 	from {
 		opacity: 0;
-		visibility: hidden;
-		background: #fff;
 	}
 	to {
 		opacity: 1;
-  	visibility: visible;
-		background: #fff;
+	}
+}
+@-webkit-keyframes pageFeedout {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
+@keyframes pageFeedout {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
 	}
 }
 ::-moz-selection {
