--- a/style.css
+++ b/style.css
@@ -485,8 +485,8 @@ aside h4 {
 	font-family: 'Dosis';
 	font-size: 1.2em;
 	padding: 10px;
-	border-top: solid 1px #c6c6c6;
-	border-bottom: solid 1px #c6c6c6;
+	border-top: solid 1px #e4e4e4;
+	border-bottom: solid 1px #e4e4e4;
 	background: #fbfbfb;
 	overflow: hidden;
 }
