--- a/style.css
+++ b/style.css
@@ -1740,6 +1740,8 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
   max-width: 70vw;
   max-height: 70vh;
 	border-radius: 3px;
+	-webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+	        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
 }
 .delay {
 	opacity: 0;
