--- a/style.css
+++ b/style.css
@@ -1720,7 +1720,7 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
 	bottom: 0;
 	right: 0;
 	left: 0;
-	background: rgba(250, 250, 250, .3);
+	background: url(//rawgit.com/2001Y/YTech/master/load.svg) no-repeat center, rgba(250, 250, 250, .3);
 	backdrop-filter: blur(3px);
 	-webkit-backdrop-filter: blur(3px);
 	z-index: 99999;
@@ -1740,16 +1740,12 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
 	-webkit-transform: translate(-50%, -50%);
 	        transform: translate(-50%, -50%);
 }
-.light-box img:not([src="//rawgit.com/2001Y/YTech/master/load.svg"]) {
+.light-box img {
   max-width: 70vw;
   max-height: 70vh;
 	border-radius: 3px;
 	-webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
 	        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
-}
-[src="//rawgit.com/2001Y/YTech/master/load.svg"] {
-	-webkit-box-shadow: 0;
-	        box-shadow: 0;
 }
 .delay {
 	opacity: 0;
