--- a/style.css
+++ b/style.css
@@ -1804,6 +1804,15 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
 	}
 }
 
+/* 404 */
+#404 {
+	width: 100%;
+	height: 15em;
+	border-radius: 6px;
+	padding: 20px;
+	background: #1c1c1c;
+}
+
 /* Siema */
 
 .all-siema {
