--- a/style.css
+++ b/style.css
@@ -1805,12 +1805,30 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
 }
 
 /* 404 */
-#nopage {
+.nopage {
 	color: #36ff07;
 	height: 15em;
 	border-radius: 6px;
 	padding: 20px;
 	background: #1c1c1c;
+}
+.ityped-cursor {
+    font-size: 2.2rem;
+    opacity: 1;
+    -webkit-animation: blink 0.3s infinite;
+    animation: blink 0.3s infinite;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+}
+@-webkit-keyframes blink {
+    100% {
+        opacity: 0;
+    }
+}
+@keyframes blink {
+    100% {
+        opacity: 0;
+    }
 }
 
 /* Siema */
