--- a/style.css
+++ b/style.css
@@ -58,12 +58,12 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-kerning: normal;
 	        font-kerning: normal;
-	-webkit-animation: 1s pageFeedin;
-	        animation: 1s pageFeedin;
+	-webkit-animation: 1s pageFeedin ease-in;
+	        animation: 1s pageFeedin ease-in;
 }
 .feedout {
-	-webkit-animation: 1s pageFeedout;
-	        animation: 1s pageFeedout;
+	-webkit-animation: 1s pageFeedout ease-in;
+	        animation: 1s pageFeedout ease-in;
 }
 @-webkit-keyframes pageFeedin {
 	from {
