--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
 @-webkit-keyframes pageFeedin {
 	from {
 		opacity: 0;
+		background: #fff;
 	}
 	to {
 		opacity: 1;
@@ -76,6 +77,7 @@ body {
 @keyframes pageFeedin {
 	from {
 		opacity: 0;
+		background: #fff;
 	}
 	to {
 		opacity: 1;
@@ -87,6 +89,7 @@ body {
 	}
 	to {
 		opacity: 0;
+		background: #fff;
 	}
 }
 @keyframes pageFeedout {
@@ -95,6 +98,7 @@ body {
 	}
 	to {
 		opacity: 0;
+		background: #fff;
 	}
 }
 ::-moz-selection {
