--- a/style.css
+++ b/style.css
@@ -1815,6 +1815,10 @@ pre:hover .html:before,pre:hover .html:after,pre:hover .css:before,pre:hover .cs
 	border-radius: 6px;
 	padding: 20px;
 	background: #1c1c1c;
+}
+#nopage code {
+	height: 2em;
+	overflow: hidden;
 	-webkit-animation: typewriter 4s steps(44) 1s 1 normal both;
 	        animation: typewriter 4s steps(44) 1s 1 normal both;
 }
