--- a/style.css
+++ b/style.css
@@ -1277,6 +1277,16 @@ a.download:hover {
 	}
 }
 
+.feed-item-desc {
+	display: none;
+}
+.link .separator {
+	width: 50px;
+	height: 50px;
+	-o-object-fit: cover;
+	   object-fit: cover;
+}
+
 /* Noscript */
 
 #noscript {
