--- a/style.css
+++ b/style.css
@@ -1280,7 +1280,7 @@ a.download:hover {
 .feed-item-desc {
 	display: none;
 }
-.link .separator {
+.link img {
 	width: 50px;
 	height: 50px;
 	-o-object-fit: cover;
