--- a/style.css
+++ b/style.css
@@ -1277,14 +1277,11 @@ a.download:hover {
 	}
 }
 
+.relation-posts {
+	
+}
 .feed-item-desc {
 	display: none;
-}
-.link img {
-	width: 50px;
-	height: 50px;
-	-o-object-fit: cover;
-	   object-fit: cover;
 }
 
 /* Noscript */
