--- a/style.css
+++ b/style.css
@@ -205,10 +205,11 @@ h1,h2,h3,h4,h5,h6 {
 	border-radius: 3px;
 }
 .youtube {
-  position: relative;
+	max-width: 500px;
   width: 100%;
   padding-top: 56.25%;
   margin: 0 auto;
+	position: relative;
 }
 .youtube iframe {
   width: 100%;
@@ -1278,7 +1279,7 @@ a.download:hover {
 }
 
 .relation-posts {
-	
+
 }
 .feed-item-desc {
 	display: none;
