--- a/style.css
+++ b/style.css
@@ -914,7 +914,7 @@ nav li:hover {
 		background: #8ddbba;
 	}
 	#nav-checkbox:checked+label .nav-border:before,#nav-checkbox:checked+label .nav-border:after {
-		margin-top: 0px;
+		margin-top: 0;
 	}
 	#nav-checkbox:checked+label .nav-border:before {
 		-webkit-transform: rotate(-45deg);
@@ -1415,7 +1415,7 @@ a.download:hover {
 	font-size: 80%;
 	font-weight: 600;
 	padding: 7px 20px;
-	margin: 0px 0 10px -5px;
+	margin: 0 0 10px -5px;
 	text-align: center;
 	border-radius: 20px;
 	display: inline-block;
@@ -1447,7 +1447,7 @@ a.download:hover {
 	position: relative;
 	vertical-align: baseline;
 	background: #fff;
-	border-radius: 0px 3px 3px 3px;
+	border-radius: 0 3px 3px 3px;
 	border: 3px solid;
 	border-color: #f00;
 	padding: 15px;
@@ -1466,8 +1466,8 @@ a.download:hover {
 	max-width: 80%;
 	border: 1px solid;
 	border-color: #f00;
-	border-radius: 8px 8px 0px 0px;
-	margin: -45px -10px 0px -18px;
+	border-radius: 8px 8px 0 0;
+	margin: -40px -10px 0 -18px;
 	padding: 3px 10px 1px 10px;
 }
 .merit_demerit ul:first-of-type li:before {
@@ -1481,7 +1481,7 @@ a.download:hover {
 	font-size: 80%;
 	font-weight: 600;
 	padding: 7px 20px;
-	margin: 0px 0 10px -5px;
+	margin: 0 0 10px -5px;
 	text-align: center;
 	border-radius: 20px;
 	display: inline-block;
