--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ a,p {
   font-size: 100%;
   vertical-align: baseline;
 }
+a {
+  display: inline-block;
+  padding: .5em;
+  margin: -.5em;
+}
 table {
   border-collapse: collapse;
   border-spacing: 0;
